--- a/service/templates/service/shop.html
+++ b/service/templates/service/shop.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{% static 'CarServiceMain/assets/css/main.css' %}" />
 		<link rel="stylesheet" href="{% static 'CarServiceMain/assets/css/shop.css' %}" />
+        <link rel="stylesheet" href="{% static 'service/css/popup.css' %}" />
         <link rel="stylesheet" href="{% static 'CarServiceMain/assets/css/workers.css' %}" />
 		<noscript><link rel="stylesheet" href="{% static 'CarServiceMain/assets/css/noscript.css' %}" /></noscript>
 	</head>
@@ -48,9 +49,26 @@
                                             <h3>Name: {{ item.el_name }}</h3>
                                             <h5>Manufacturer: {{ item.company_name }}</h5>
                                             <p>Amount in stock: {{ item.quantity }}</p>
-                                            <ul>
-                                                <a href="" class="button">Order</a>
-                                            </ul>
+                                            <h5>Price: {{ item.price }} $</h5>
+                                            {% if item.quantity >= 1 %}
+                                                <form method="post" action="{% url 'order_item' item.id %}">
+                                                    {% csrf_token %}
+                                                    <label for="task_id">Select Task:</label>
+                                                    <select name="task_id" id="task_id">
+                                                        <option value="">Select a Task</option>
+                                                        {% for task in tasks %}
+                                                            <option value="{{ task.id }}">{{ task.id }}</option>
+                                                        {% endfor %}
+                                                    </select>
+                                                    <button type="submit">Order</button>
+                                                </form>
+
+                                                <div class="success-message" id="success-message">
+                                                    <p>Item has been successfully ordered!</p>
+                                                </div>
+                                            {% else %}
+                                                <p>This item is not available</p>
+                                            {% endif %}
                                         </li>
                                     {% endif %}
                                 {% endfor %}
@@ -71,7 +89,9 @@
 			<script src="{% static 'CarServiceMain/assets/js/main.js' %}"></script>
 			<script src="{% static 'CarServiceMain/assets/js/cataloge.js' %}"></script>
             <script src="{% static 'authorisation/JavaScript/maps.js' %}"></script>
-{#            <script src="{% static 'authorisation/JavaScript/authorisation.js' %}"></script>#}
+            <script src="{% static 'service/JavaScript/popup.js' %}"></script>
+
+
 
 	</body>
 </html>
